fix(dashboard-horizontal-bar): added expand and collapse

--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -89,3 +89,22 @@ ul.chart-legend {
   text-anchor: end;
   font-size: 10pt;
 }
+
+.chart-expand-button {
+  background-color: #F2F5FC;
+  border: 0.08rem solid #788598;
+  border-radius: 8px;
+  cursor: pointer;    cursor: pointer;
+  text-align: center;
+  padding: 0.4rem;
+  float: left;
+
+  p {
+    color: #000000;
+    font-size: 10pt;
+    top: -0.2rem;
+    margin-bottom: 0.2rem;
+    text-align: left;
+    width: 86%; 
+  }
+}
